service and cli

--- a/media/templates/media/admin_stash_form.html
+++ b/media/templates/media/admin_stash_form.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load static %}
 
-{% block title %}Add URL - Stashcast{% endblock %}
+{% block title %}Add URL - StashCast{% endblock %}
 
 {% block extrastyle %}
 <style>
@@ -141,7 +141,7 @@
 {% block content %}
 <div class="stash-form-container">
     <div class="stash-form">
-        <h1>Add URL to Stashcast</h1>
+        <h1>Add URL to StashCast</h1>
         <p>Download media from any URL supported by yt-dlp or direct media links.</p>
 
         <div class="example-urls">
@@ -178,7 +178,7 @@
             </div>
 
             <div class="submit-row">
-                <input type="submit" value="Add to Stashcast">
+                <input type="submit" value="Add to StashCast">
             </div>
         </form>
     </div>
