--- a/media/templates/media/home.html
+++ b/media/templates/media/home.html
@@ -240,7 +240,7 @@
                     <a class="pill" href="/admin/tools/list/?type=audio">List view</a>
                     <!-- <a class="pill" href="/feeds/audio.xml">Subscribe</a> -->
                     <button class="pill copy-btn" data-url="/feeds/audio.xml" type="button">Copy subscribe URL</button>
-                    <a class="pill" href="/feeds/audio-view.xml">View RSS feed XML</a>
+                    <a class="pill" href="/feeds/audio.xml?view=1">View RSS feed XML</a>
                     <a class="pill" href="/admin/media/mediaitem/?media_type=audio">Manage</a>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                     <a class="pill" href="/admin/tools/list/?type=video">List view</a>
                     <!-- <a class="pill" href="/feeds/video.xml">Subscribe</a> -->
                     <button class="pill copy-btn" data-url="/feeds/video.xml" type="button">Copy subscribe URL</button>
-                    <a class="pill" href="/feeds/video-view.xml">View RSS feed XML</a>
+                    <a class="pill" href="/feeds/video.xml?view=1">View RSS feed XML</a>
                     <a class="pill" href="/admin/media/mediaitem/?media_type=video">Manage</a>
                 </div>
             </div>
@@ -262,7 +262,7 @@
                     <a class="pill" href="/admin/tools/list/?type=all">List view</a>
                     <!-- <a class="pill" href="/feeds/combined.xml">Subscribe</a> -->
                     <button class="pill copy-btn" data-url="/feeds/combined.xml" type="button">Copy subscribe URL</button>
-                    <a class="pill" href="/feeds/combined-view.xml">View RSS feed XML</a>
+                    <a class="pill" href="/feeds/combined.xml?view=1">View RSS feed XML</a>
                     <a class="pill" href="/admin/media/mediaitem/">Manage</a>
                 </div>
             </div>
